--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
-  producer-api:
+  consumer-api:
     build: .
-    container_name: producer-api
+    container_name: consumer-api
     ports:
       - "8000:8000"
     env_file:
